# OOP-Project

./: README.md
backend/: CMakeLists.txt  Dockerfile
backend-node/: .env.example  Dockerfile  package.json
backend-node/src/: index.js
backend-node/src/controllers/: auth.js  dashboard.js  leave.js  schedule.js  staff.js
backend-node/src/middleware/: auth.js
backend/include/controllers/: AuthController.h  AuthMiddleware.h  Controllers.h
backend/include/middleware/: AuthMiddleware.h
backend/include/models/: Shift.h  User.h
backend/src/: main.cpp
backend/src/controllers/: AuthController.cpp  DashboardController.cpp  LeaveController.cpp  ScheduleController.cpp  StaffController.cpp
backend/src/middleware/: AuthMiddleware.cpp
database/: schema.sql
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/shared/: TopNav.jsx
frontend/src/hooks/: useAuth.js
frontend/src/pages/: EmployeePages.jsx  Leave.jsx  Login.jsx  ManagerDashboard.jsx  Schedule.jsx  Signup.jsx  Staff.jsx
frontend/src/styles/: global.css
frontend/src/utils/: api.js
